test/fixtures/type-error/cyclic.lys
var a = 1
var i32 = a